--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,6 +27,7 @@
 
     <footer>
         <p>Character build data from <a href="https://www.prydwen.gg/star-rail/" target="_blank">Prydwen.gg</a> via <a href="https://docs.google.com/spreadsheets/d/1SQK2xihURxiA2PTp0lAiRYXlphnm-EFa3CoKaUO7UOc/edit?gid=1312600809#gid=1312600809" target="_blank">Relic Salvaging Helper Spreadsheets by arthurmauk</a>. Relics data from <a href="https://honkai-star-rail.fandom.com/wiki/Relic/Sets" target="_blank">Honkai: Star Rail Wiki</a>.</p>
+        <p>Website built with Gemini AI - <a href="https://github.com/lazywasabi/hsr-relics" target="_blank">Source Code</a></p>
     </footer>
 
     <script src="script.js"></script>
