--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   <nav id="main-nav">
     <ul>
-      <li><a href="#/" data-nav-path="/">All</a></li>
-      <li><a href="#/relics" data-nav-path="/relics">Cavern</a></li>
-      <li><a href="#/ornaments" data-nav-path="/ornaments">Planar</a></li>
-      <li><a href="#/characters" data-nav-path="/characters">Chars</a></li>
-      <li><button id="nav-search-button">Search</button></li>
+      <li><a href="#/" data-nav-path="/"><img src="images/icon/data-bank.svg" title="All" alt="All"></a></li>
+      <li><a href="#/relics" data-nav-path="/relics"><img src="images/icon/relic.svg" title="Cavern Relics" alt="Cavern Relics"></a></li>
+      <li><a href="#/ornaments" data-nav-path="/ornaments"><img src="images/icon/ornaments.svg" title="Planar Ornaments" alt="Planar Ornaments"></a></li>
+      <li><a href="#/characters" data-nav-path="/characters"><img src="images/icon/character.svg" title="Characters" alt="Characters"></a></li>
+      <li><button id="nav-search-button"><img src="images/icon/search.svg" title="Search" alt="Search"></button></li>
     </ul>
   </nav>
 
@@ -49,7 +49,7 @@
   </div>
 
   <footer>
-    <p>Character build data from <a href="https://www.prydwen.gg/star-rail/" target="_blank">Prydwen.gg</a> via <a href="https://docs.google.com/spreadsheets/d/1SQK2xihURxiA2PTp0lAiRYXlphnm-EFa3CoKaUO7UOc/edit?gid=1312600809#gid=1312600809" target="_blank">Relic Salvaging Helper Spreadsheets by arthurmauk</a>. Relics data from <a href="https://honkai-star-rail.fandom.com/wiki/Relic/Sets" target="_blank">Honkai: Star Rail Wiki</a>.</p>
+    <p>Character build data from <a href="https://www.prydwen.gg/star-rail/" target="_blank">Prydwen.gg</a> via <a href="https://docs.google.com/spreadsheets/d/1SQK2xihURxiA2PTp0lAiRYXlphnm-EFa3CoKaUO7UOc/edit?gid=1312600809#gid=1312600809" target="_blank">Relic Salvaging Helper Spreadsheets by arthurmauk</a>.</p>
     <p>Website built with Gemini AI - <a href="https://github.com/lazywasabi/hsr-relics" target="_blank">Source Code</a></p>
   </footer>
 
