Update website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Honkai: Star Rail Relic Helper</title>
+  <title>Relic Salvaging Helper for Honkai: Star Rail</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1>
-      <a href="#">Honkai: Star Rail Relic Helper</a>
+      <a href="#">Relic Salvaging Helper for Honkai: Star Rail</a>
     </h1>
   </header>
 
