--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
   </div>
 
   <footer>
-    <p>Character build data from <a href="https://www.prydwen.gg/star-rail/" target="_blank">Prydwen.gg</a> via <a href="https://docs.google.com/spreadsheets/d/1SQK2xihURxiA2PTp0lAiRYXlphnm-EFa3CoKaUO7UOc/edit?gid=1312600809#gid=1312600809" target="_blank">Relic Salvaging Helper Spreadsheets by arthurmauk</a>.</p>
-    <p>Website built with Gemini AI - <a href="https://github.com/lazywasabi/hsr-relics" target="_blank">Source Code</a></p>
+    <p>This website is not affiliated with HoYoverse</p>
+    <p>Character build data from <a href="https://www.prydwen.gg/star-rail/" target="_blank">Prydwen.gg</a> and <a href="https://github.com/lazywasabi/hsr-relics?tab=readme-ov-file#character-build-data-sources" target="_blank">other sources</a></p>
+    <p><a href="https://github.com/lazywasabi/hsr-relics" target="_blank">Source code on GitHub</a></p>
   </footer>
 
   <script src="script.js"></script>
