--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Relic Salvaging Helper for Honkai: Star Rail</title>
+  <meta name="description" content="Should I keep this relic? Check which characters use a specific relic set and stat combination to decide whether to keep or salvage your relics in Honkai: Star Rail">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
