Add support for notice on home page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <p><a href="https://github.com/lazywasabi/hsr-relics" target="_blank">Source code on GitHub</a></p>
   </footer>
 
+  <template id="homeNotice">
+    <div class="page-container home-page-notice hide"></div>
+  </template>
+
   <script src="script.js"></script>
 </body>
 
