--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul>
       <li><a href="#/" data-nav-path="/" title="Home"><img src="images/icon/data-bank.svg" alt="Home"></a></li>
       <li><a href="#/relics" data-nav-path="/relics" title="Cavern Relics"><img src="images/icon/relic.svg" alt="Cavern Relics"></a></li>
-      <li><a href="#/ornaments" data-nav-path="/ornaments" title="Planar Ornaments"><img src="images/icon/ornaments.svg" alt="Planar Ornaments"></a></li>
+      <li><a href="#/ornaments" data-nav-path="/ornaments" title="Planar Ornaments"><img src="images/icon/planar-ornament.svg" alt="Planar Ornaments"></a></li>
       <li><a href="#/characters" data-nav-path="/characters" title="Characters"><img src="images/icon/character.svg" alt="Characters"></a></li>
       <li><button id="nav-search-button" title="Search"><img src="images/icon/search.svg" alt="Search"></button></li>
     </ul>
